--- a/pages/department/department.wxml
+++ b/pages/department/department.wxml
@@ -1,7 +1,14 @@
 <!--pages/department/department.wxml-->
 <text>pages/department/department.wxml</text>
 <van-grid column-num="3" gutter="{{ 10 }}">
-  <van-grid-item content-class="my-grid-item" icon="photo-o" text="文字" wx:for="{{ 8 }}" />
+  <van-grid-item
+    content-class="my-grid-item"
+    icon="{{ item.icon }}"
+    text="{{ item.text }}"
+    wx:for="{{ department }}"
+    link-type="navigateTo"
+    url="/pages/doctor/doctor?department={{ item.name }}"
+  />
 </van-grid>
 <van-tabbar active="{{ active }}" bind:change="onChange">
   <van-tabbar-item wx:for="{{ list }}" wx:key="index" icon="{{ item.icon }}">
