--- a/pages/department/department.wxml
+++ b/pages/department/department.wxml
@@ -1,5 +1,8 @@
 <!--pages/department/department.wxml-->
-<text>pages/department/department.wxml</text>
+<van-search
+  value="{{ value }}"
+  placeholder="疾病、医院、科室、医生名"
+/>
 <van-grid column-num="3" gutter="{{ 10 }}">
   <van-grid-item
     content-class="my-grid-item"
