--- a/pages/doctor/doctor.wxml
+++ b/pages/doctor/doctor.wxml
@@ -1,16 +1,2 @@
 <!--pages/doctor/doctor.wxml-->
-<van-search value="{{ search }}" placeholder="疾病、医院、科室、医生名" />
-<van-dropdown-menu>
-  <van-dropdown-item value="{{ sort }}" options="{{ sortOption }}" />
-  <van-dropdown-item id="item" title="{{ areaName }}" >
-    <van-area
-      area-list="{{ areaList }}"
-      columns-num="{{ 2 }}"
-      title="省份城市"
-      value="{{ areaSelect }}"
-      bind:confirm="areaConfirm"
-      bind:cancel="areaCancel"
-    />
-  </van-dropdown-item>
-</van-dropdown-menu>
-<text>{{ department }}</text>
+<text>{{doctor_id}}</text>
