--- a/pages/doctor/doctor.wxss
+++ b/pages/doctor/doctor.wxss
@@ -1,1 +1,39 @@
 /* pages/doctor/doctor.wxss */
+.van-image {
+  float: right;
+  margin: 10px 15px 0px 0px;
+}
+
+.info {
+  margin-left: 15px;
+}
+
+#name {
+  display: block;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#introduction {
+  margin: 15px 15px 0px 0px;
+  overflow: hidden;           /* 超出一行文字自动隐藏 */
+  text-overflow: ellipsis;    /* 文字隐藏后添加省略号 */
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.count {
+  margin: 15px;
+}
+
+.count text {
+  color: orange;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+van-goods-action-button {
+  margin-bottom: 5px;
+}
