完成 健康档案样式布局（请求逻辑待补充）
完成 健康档案样式布局（请求逻辑待补充）

--- a/pages/my/healthFile/healthFile.wxss
+++ b/pages/my/healthFile/healthFile.wxss
@@ -1,1 +1,8 @@
-/* pages/my/healthFile/healthFile.wxss */
+van-radio-group {
+  display: flex;
+  justify-content: space-around;
+}
+
+.firstRadio{
+  margin-right: 30px;
+}
