--- a/pages/textConsult/textConsult.wxss
+++ b/pages/textConsult/textConsult.wxss
@@ -1,1 +1,10 @@
 @import "/editor/editor.wxss";
+
+.container_2 {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+} 
