--- a/pages/my/phoneConsult/phoneConsult.wxml
+++ b/pages/my/phoneConsult/phoneConsult.wxml
@@ -1,11 +1,40 @@
 <van-tabs active="{{ active }}" animated swipeable>
   <van-tab title="进行中">
-  待确认
+    <van-cell-group>
+      <van-cell wx:key="index" wx:for="{{ ingList }}" title="{{item.doctor_name}}" link-type="navigateTo" url="/pages/my/phoneConsult/ing/ing?id={{item.id}}" is-link center use-label-slot>
+        <view slot="label">
+          <text>预约日期：{{item.date}}</text>
+        </view>
+        <view style="margin-right:20px;">
+          <text style="font-size:13px;">医生确认：{{ item.doctor_confirm ? '√' : '×'}}
+          用户确认：{{ item.user_confirm ? '√' : '×'}}
+          ￥15</text>
+        </view>
+      </van-cell>
+    </van-cell-group>
   </van-tab>
   <van-tab title="待评价">
-  待评价
+    <van-cell-group>
+      <van-cell wx:key="index" wx:for="{{ ingList }}" title="{{item.doctor_name}}" link-type="navigateTo" url="/pages/my/phoneConsult/waitComment/waitComment?id={{item.id}}" is-link center use-label-slot>
+        <view slot="label">
+          <text>预约日期：{{item.date}}</text>
+        </view>
+        <view style="margin-right:20px;">
+          <text style="font-size:15px;">￥{{item.price}}</text>
+        </view>
+      </van-cell>
+    </van-cell-group>
   </van-tab>
   <van-tab title="已完成">
-  已完成
+    <van-cell-group>
+      <van-cell wx:key="index" wx:for="{{ ingList }}" title="{{item.doctor_name}}" link-type="navigateTo" url="/pages/my/phoneConsult/finish/finish?id={{item.id}}" is-link center use-label-slot>
+        <view slot="label">
+          <text>预约日期：{{item.date}}</text>
+        </view>
+        <view style="margin-right:20px;">
+          <text style="font-size:15px;">￥{{item.price}}</text>
+        </view>
+      </van-cell>
+    </van-cell-group>
   </van-tab>
 </van-tabs>
