--- a/pages/my/textConsult/ing/ing.wxss
+++ b/pages/my/textConsult/ing/ing.wxss
@@ -7,4 +7,8 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-} 
+}
+
+van-goods-action-button {
+  margin-bottom: 5px;
+}
