富文本图片上传（超级无敌异步回调）
富文本图片上传（超级无敌异步回调）

--- a/pages/my/textConsult/ing/ing.wxml
+++ b/pages/my/textConsult/ing/ing.wxml
@@ -45,5 +45,5 @@
 
 <van-goods-action>
   <van-goods-action-button text="确认订单" type="warning" bind:click="" />
-  <van-goods-action-button text="提交咨询" bind:click="clickLogText" />
+  <van-goods-action-button text="提交咨询" bind:click="clickCommit" />
 </van-goods-action>
