--- a/pages/my/textConsult/finish/finish.wxml
+++ b/pages/my/textConsult/finish/finish.wxml
@@ -23,3 +23,5 @@
 <van-cell-group>
   <van-field label="评价" type="textarea" autosize model:value="{{ comment }}" readonly />
 </van-cell-group>
+
+<view style="margin-bottom:5px;">　</view>
