--- a/pages/my/phoneConsult/ing/ing.wxml
+++ b/pages/my/phoneConsult/ing/ing.wxml
@@ -1,5 +1,6 @@
 <van-cell-group>
-  <van-field label="预约日期"  model:value="{{ date }}"  />
-  <van-field label="手机号码" type="number" model:value="{{ phone }}" />
+  <van-field label="医生姓名" type="text" model:value="{{ doctor_name }}" readonly/>
+  <van-field label="预约日期"  model:value="{{ date }}"  readonly/>
+  <van-field label="手机号码" type="number" model:value="{{ phone }}" readonly/>
 </van-cell-group>
-<van-button style="width:100%;position:fixed;bottom:0;" type="primary" size="large" bind:click="">确认订单</van-button>
+<van-button style="width:100%;position:fixed;bottom:0;" type="primary" size="large" bind:click="onClickCommit">确认订单</van-button>
