--- a/pages/my/phoneConsult/waitComment/waitComment.wxml
+++ b/pages/my/phoneConsult/waitComment/waitComment.wxml
@@ -1,6 +1,7 @@
 <van-cell-group>
-  <van-field label="预约日期"  model:value="{{ date }}"  />
-  <van-field label="手机号码" type="number" model:value="{{ phone }}" />
+  <van-field label="医生姓名" type="text" model:value="{{ doctor_name }}" readonly/>
+  <van-field label="预约日期"  model:value="{{ date }}"  readonly/>
+  <van-field label="手机号码" type="number" model:value="{{ phone }}" readonly/>
 </van-cell-group>
 
 <van-rate
@@ -16,4 +17,4 @@
   <van-field label="评价" type="textarea" autosize model:value="{{ comment }}" placeholder="请输入评价"/>
 </van-cell-group>
 
-<van-button style="width:100%;position:fixed;bottom:0;" type="primary" size="large" bind:click="">提交评价</van-button>
+<van-button style="width:100%;position:fixed;bottom:0;" type="primary" size="large" bind:click="onClickCommit">提交评价</van-button>
