--- a/pages/phoneConsult/phoneConsult.wxml
+++ b/pages/phoneConsult/phoneConsult.wxml
@@ -1,6 +1,6 @@
 <van-cell-group>
   <van-field label="预约日期" bind:focus="showDatePicker" model:value="{{ tempDate }}" placeholder="请选择预约日期" />
-  <van-field label="手机号码" type="number" model:value="{{ userInfo.phone }}" placeholder="请输入手机号码"/>
+  <van-field label="手机号码" type="number" model:value="{{ phone }}" placeholder="请输入手机号码"/>
 </van-cell-group>
 <van-button style="width:100%;position:fixed;bottom:0;" type="primary" size="large" bind:click="onClickCommit">提交</van-button>
 
