--- a/pages/doctorList/doctorList.wxml
+++ b/pages/doctorList/doctorList.wxml
@@ -1,7 +1,7 @@
 <!--pages/doctorList/doctorList.wxml-->
 <van-search value="{{ search }}" placeholder="疾病、医院、科室、医生名" />
 <van-dropdown-menu>
-  <van-dropdown-item value="{{ sort }}" options="{{ sortOption }}" />
+  <van-dropdown-item value="{{ sort }}" options="{{ sortOption }}" bind:change="onClickChange"/>
   <van-dropdown-item id="item" title="{{ areaName }}" >
     <van-area
       area-list="{{ areaList }}"
