文章详情（浏览、点赞） 接口调试
文章详情（浏览、点赞） 接口调试

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,8 +9,10 @@
 <van-card
   wx:for="{{articleList}}"
   wx:key="index"
+  id="{{item.id}}"
   thumb="{{ item.coverImage }}"
   tag="{{ item.type }}"
+  bindtap="jump"
 >
   <view slot="title" style="margin-top:10px;float:right;">
     <text style="font-weight:bolder;font-size:15px">{{item.title}}</text>
