--- a/pages/phoneConsult/phoneConsult.wxml
+++ b/pages/phoneConsult/phoneConsult.wxml
@@ -1,4 +1,5 @@
 <van-cell-group>
+  <van-field label="医生姓名" type="text" model:value="{{ doctor_name }}" readonly/>
   <van-field label="预约日期" bind:focus="showDatePicker" model:value="{{ tempDate }}" placeholder="请选择预约日期" />
   <van-field label="手机号码" type="number" model:value="{{ phone }}" placeholder="请输入手机号码"/>
 </van-cell-group>
