操作结果 轻提示
操作结果 轻提示

--- a/pages/my/phoneConsult/ing/ing.wxml
+++ b/pages/my/phoneConsult/ing/ing.wxml
@@ -4,3 +4,5 @@
   <van-field label="手机号码" type="number" model:value="{{ phone }}" readonly/>
 </van-cell-group>
 <van-button style="width:100%;position:fixed;bottom:0;" type="primary" size="large" bind:click="onClickCommit">确认订单</van-button>
+
+<van-toast id="van-toast" />
