--- a/pages/my/phoneConsult/waitComment/waitComment.wxml
+++ b/pages/my/phoneConsult/waitComment/waitComment.wxml
@@ -18,3 +18,5 @@
 </van-cell-group>
 
 <van-button style="width:100%;position:fixed;bottom:0;" type="primary" size="large" bind:click="onClickCommit">提交评价</van-button>
+
+<van-toast id="van-toast" />
