--- a/pages/my/textConsult/ing/ing.wxml
+++ b/pages/my/textConsult/ing/ing.wxml
@@ -46,3 +46,5 @@
   <van-goods-action-button text="确认订单" type="warning" bind:click="clickConfirm" />
   <van-goods-action-button text="提交咨询" bind:click="clickCommit" />
 </van-goods-action>
+
+<van-toast id="van-toast" />
