界面、科室优化
界面、科室优化

--- a/pages/my/healthFile/healthFile.wxml
+++ b/pages/my/healthFile/healthFile.wxml
@@ -44,7 +44,8 @@
   <van-field label="药物过敏" type="textarea" autosize value="{{ userInfo.allergy }}" placeholder="请输入药物过敏" bind:input="onChangeAllergy"/>
   <van-field label="其他补充" type="textarea" autosize value="{{ userInfo.other }}" placeholder="请输入其他补充" bind:input="onChangeOther"/>
 </van-cell-group>
-<van-button style="width:100%;" type="primary" size="large" bind:click="onClickCommit">保存档案</van-button>
+<view style="margin-bottom:30px">　</view>
+<van-button style="width:100%;position:fixed;bottom:0" type="primary" size="large" bind:click="onClickCommit">保存档案</van-button>
 
 <van-popup custom-style="width:100%;" show="{{ showDatePicker }}">
   <van-datetime-picker
